--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,24 @@
 .flexwrapper {
-  margin-left: -1em;
+    margin-left: -1em;
+    display: flex;
+    justify-content:center;
 }
 
 .flexwrapper > section {
-	float: left;
-	width: 25%;
+	float: right;
+	width: 30%;
 	border-left: 1em solid #eff5f5;
-  box-sizing: border-box;
+    box-sizing: border-box;
 	margin-bottom: .5em;
-	padding-top: 25%;
+	padding-top: 5%;
+    padding-bottom: 5%
+    
 }
 
 .flexwrapper > section:nth-child(1) { background: #a9cc5b; }
 .flexwrapper > section:nth-child(2) { background: #39b4e0; }
 .flexwrapper > section:nth-child(3) { background: #e4582b; }
-.flexwrapper > section:nth-child(4) { background: #f8c624; }
+
 
 
 
@@ -26,4 +30,5 @@
 
 body { font: 1.125em/1.4 'Source Sans Pro', sans-serif; background: #eff5f5; color: #31656e; text-align: center; padding: 4em 0; }
 h1 { font-weight: 900; font-size: 1.6em; line-height: 1.2; }
-h2 { font-weight: 400; font-size: 1em; color: #597a80; text-transform: uppercase; margin: .5em 0 4em; letter-spacing: .25em; }
+h2 { font-weight: 400; font-size: 1em; color: #597a80; text-transform: uppercase; margin: .5em 0 3em; letter-spacing: .25em; }
+h3 { font-weight: 700; font-size: 1.3em; color: #597a80; text-transform: uppercase; margin: .1em 0 1em; letter-spacing: .25em; }
